<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="S15_NG" Id="{fa03007f-9ac1-4b49-8987-777c7baa4a8b}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM S15_NG
VAR
	//工站
	station					: REFERENCE TO FB_Station:=fbstation[15];
	//气缸
	fbHOZCyl_1			:REFERENCE TO FB_Cylinder:=fbCylinder[39];	//	分料气缸1
	fbHOZCyl_2			:REFERENCE TO FB_Cylinder:=fbCylinder[40];	//	分料气缸2
	
	
	//延时
	arTonDelay :ARRAY[1..20] OF TON;
	//返回值
	UdiReturnValue :ARRAY[1..20] OF UDINT;
	i: INT;
	NGFlagR_TRIG: R_TRIG;
	// Box检测到位
	arxBoxCheckSensor: ARRAY[1..2] of BOOL;
	// //相机检测NG信号
	xNGFlag: BOOL;
			// 设备停止延时
	tStopDelay: TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[A_Input();
Alarm();
Delay();
FlowAuto();
FlowInit();
General();
ILC();
TipAuto();
TipManual();
Z_Output();]]></ST>
    </Implementation>
    <Action Name="A_Input" Id="{03aa5434-4f82-4612-9525-5439c5ebc821}">
      <Implementation>
        <ST><![CDATA[//气缸
fbHOZCyl_1.xWP_Sensor:=IxS13HOZCyl_1WP	;//	NG推料气缸1¶动点
fbHOZCyl_1.xHP_Sensor:=IxS13HOZCyl_1HP	;//	NG推料气缸1¶原点
fbHOZCyl_2.xWP_Sensor:=IxS13HOZCyl_2WP	;//	NG推料气缸2¶动点
fbHOZCyl_2.xHP_Sensor:=IxS13HOZCyl_2HP	;//	NG推料气缸2¶原点
//退料检测
arxBoxCheckSensor[1] :=IxS13SensorReached1; //NG推料处检测
arxBoxCheckSensor[2] :=IxS13SensorReached2; //NG流道处检测
  



]]></ST>
      </Implementation>
    </Action>
    <Action Name="Alarm" Id="{c93c5b6a-db29-4dde-abc2-9023ce755d74}">
      <Implementation>
        <ST><![CDATA[//
station.adwAlarm[1].00:=station.xInitTimeout;	  			//S08Label 初始化超时

]]></ST>
      </Implementation>
    </Action>
    <Action Name="Delay" Id="{2a42c8ab-5252-4e60-8c43-a3176ed90e84}">
      <Implementation>
        <ST><![CDATA[(*arTonDelay[01](IN:= , PT:=T#0.1S , Q=> , ET=> );*)//TipAuto使用
arTonDelay[02](IN:=  , PT:=T#1S , Q=> , ET=> );
arTonDelay[03](IN:=   , PT:=T#1S , Q=> , ET=> );
arTonDelay[04](IN:= , PT:=T#0.1S , Q=> , ET=> );
arTonDelay[05](IN:= , PT:=T#0.1S , Q=> , ET=> );
arTonDelay[06](IN:= , PT:=T#0.1S , Q=> , ET=> );
arTonDelay[07](IN:= , PT:=T#0.1S , Q=> , ET=> );
arTonDelay[08](IN:= , PT:=T#0.1S , Q=> , ET=> );
arTonDelay[09](IN:= , PT:=T#0.1S , Q=> , ET=> );
















]]></ST>
      </Implementation>
    </Action>
    <Action Name="FlowAuto" Id="{13c9515b-61f3-4293-b7ba-ed91fbd853be}">
      <Implementation>
        <ST><![CDATA[
//-----------------------------------------初始化是否完成判断----------------------------------------------
IF NOT station.xInitDone 
THEN
 	station.iStepAuto:=0;
 	station.xDone:=FALSE;
ELSIF station.xRunning  OR   station.xRunningOffProhibit
THEN
//-----------------------------------------动作步骤--------------------------------------------------------
CASE station.iStepAuto OF	  
	0: //----Home Step，等待启动----
		IF station.xDisabled 
			AND station.xCanRun 
			AND NOT fbMachine[1].xStopped 
			AND NOT station.xSingleRunning 
		THEN
			station.xDone:=TRUE;
		END_IF
		
		IF  station.xSingleRunning 
			OR station.xCanRun 
			AND NOT station.xDone 
			AND NOT station.xDisabled 
			AND NOT fbMachine[1].xStopped
		THEN
			station.xCycleEnable:=TRUE;
			station.xDone:= FALSE;  
			station.xRunningOffProhibit := TRUE ;//运行中信号Off禁止
			station.iStepAuto:= 10;
		END_IF
    10: //复位数据 
			station.iStepAuto:=20;
		20://等待NG信号
			IF  xNGFlag THEN
			 			station.iStepAuto:=30;
			ELSE
			 		station.iStepAuto:=999;
			END_IF
		30://等待到位信号
			IF  arxBoxCheckSensor[1] THEN
				 station.iStepAuto:=40;
			END_IF
		40://水平推料气缸伸出
			fbHOZCyl_1.xAuto:=TRUE;
			IF fbHOZCyl_1.xWP_Delay THEN
			 	 station.iStepAuto:=50;
			END_IF
		50://水平退料气缸收回
				fbHOZCyl_1.xAuto:=FALSE;
			IF fbHOZCyl_1.xHP_Delay THEN
			 	 station.iStepAuto:=60;
			END_IF
		60://等待NG流道检测
			//IF  arxBoxCheckSensor[2] THEN
			 	 station.iStepAuto:=70;
			//END_IF
		70://NG流道退料气缸伸出
			fbHOZCyl_2.xAuto:=TRUE;
			IF fbHOZCyl_2.xWP_Delay THEN
			 	 station.iStepAuto:=80;
			END_IF
		80://NG流道退料气缸收回
			fbHOZCyl_2.xAuto:=FALSE;
			IF fbHOZCyl_2.xHP_Delay THEN
			 	 station.iStepAuto:=90;
			END_IF
		90://检查NG物料
			IF NOT  arxBoxCheckSensor[2] THEN
			 	 station.iStepAuto:=999;
			END_IF
	999://----Single Run Finish----
			xNGFlag:=FALSE;	
			station.iStepAuto :=0;
			IF NOT station.xSingleContinuousRun THEN
				station.xSingleRunFlag:=FALSE;
			END_IF
			
			station.xCycleEnable:=FALSE;	
		//	station.xDone:=TRUE;
		//	station.xRunningOffProhibit := FALSE ;//运行中信号Off禁止
	ELSE
		;	
END_CASE



END_IF]]></ST>
      </Implementation>
    </Action>
    <Action Name="FlowInit" Id="{bde57046-0c6b-4088-9111-b890c54bcabe}">
      <Implementation>
        <ST><![CDATA[IF NOT station.xIniting THEN
  station.iStepInit:=0;    
ELSE
//--------------------------------------------初始化步序----------------------------------
CASE station.iStepInit OF	
 0://  
  	IF station.xIniting THEN	
  	  station.iStepInit:=10;	
  	END_IF	
10://复位数据
    station.iStepInit:=20;
20://气缸回原
		fbHOZCyl_1.xInit:=TRUE;
		fbHOZCyl_2.xInit:=TRUE;	
	IF  fbHOZCyl_1.xHP_Delay AND
		 fbHOZCyl_2.xHP_Delay THEN
		 station.iStepInit:=999;
	END_IF
999://初始化完成	
	station.iStepInit:=0;
	station.xInitDone:=TRUE;  
END_CASE
END_IF
]]></ST>
      </Implementation>
    </Action>
    <Action Name="General" Id="{18ca33ab-4a41-40cc-a10c-85884003a4c5}">
      <Implementation>
        <ST><![CDATA[{region '相机检测出NG的信号传递'}
NGFlagR_TRIG(CLK:= S14_LabelChecking.xFlowAutoDone AND S14_LabelChecking.xNGFlag, Q=> );
IF  NGFlagR_TRIG.Q THEN
		xNGFlag:=TRUE;		
END_IF
	 
{endregion}

{region "停止"}
tStopDelay(IN:= fbMachine[1].xManualMode, PT:=T#60S , Q=> , ET=> );
IF tStopDelay.Q THEN
		station.xRunningOffProhibit:=FALSE;
ELSIF  station.iStepAuto =10 THEN
		station.xRunningOffProhibit:=TRUE;
END_IF	 
{endregion}

]]></ST>
      </Implementation>
    </Action>
    <Action Name="ILC" Id="{76534184-9c70-4adc-9fee-3f36c06c66e3}">
      <Implementation>
        <ST><![CDATA[
//---------------------------------------------------工站可执行-------------------------------------------------------
station.xCanRun :=TRUE ;

//---------------------------------------------------气缸动作条件-------------------------------------------
fbHOZCyl_1.xOffILC	:=	TRUE;
fbHOZCyl_1.xOnILC	:=	fbHOZCyl_2.xHP_Sensor; 

fbHOZCyl_2.xOffILC	:=	TRUE	;
fbHOZCyl_2.xOnILC	:=	TRUE; 

//---------------------------------------------------伺服动作条件-------------------------------------------


]]></ST>
      </Implementation>
    </Action>
    <Action Name="TipAuto" Id="{f79c7a30-b885-4edd-9ed5-9b2d935a7409}">
      <Implementation>
        <ST><![CDATA[
//------------------------------------------------AutoTip Cylinder--------------------------------

//------------------------------------------------AutoTip Servo--------------------------------
//**************************************
]]></ST>
      </Implementation>
    </Action>
    <Action Name="TipManual" Id="{4b06f46d-7df0-47b3-9e69-6087ddee0dd5}">
      <Implementation>
        <ST><![CDATA[//--------------------------------------------ManualTip------------------------------------------------------

//-------------------------------------------气缸提示---------------------------------------------------------




/////////////////////////////////////////////////////////////////////////////////////////////////////////////////
]]></ST>
      </Implementation>
    </Action>
    <Action Name="Z_Output" Id="{110fb2aa-1edf-4d7b-ba77-793b2ec8f7a5}">
      <Implementation>
        <ST><![CDATA[(**************************气缸输出********************************)
QxS13HOZCyl_1WP	:=fbHOZCyl_1.xWP_Valve;//	NG推料气缸1¶动点
QxS13HOZCyl_1HP	:=fbHOZCyl_1.xHP_Valve;//	NG推料气缸1¶原点
QxS13HOZCyl_2WP	:=fbHOZCyl_2.xWP_Valve;//	NG推料气缸2¶动点
QxS13HOZCyl_2HP	:=fbHOZCyl_2.xHP_Valve;//	NG推料气缸2¶原点

  ]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="S15_NG">
      <LineId Id="26" Count="8" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="S15_NG.A_Input">
      <LineId Id="28" Count="0" />
      <LineId Id="56" Count="2" />
      <LineId Id="55" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="10" Count="3" />
      <LineId Id="8" Count="0" />
    </LineIds>
    <LineIds Name="S15_NG.Alarm">
      <LineId Id="176" Count="1" />
      <LineId Id="262" Count="0" />
      <LineId Id="266" Count="0" />
    </LineIds>
    <LineIds Name="S15_NG.Delay">
      <LineId Id="64" Count="10" />
      <LineId Id="44" Count="13" />
      <LineId Id="40" Count="0" />
    </LineIds>
    <LineIds Name="S15_NG.FlowAuto">
      <LineId Id="1155" Count="10" />
      <LineId Id="1167" Count="15" />
      <LineId Id="1452" Count="0" />
      <LineId Id="1183" Count="1" />
      <LineId Id="1256" Count="0" />
      <LineId Id="1259" Count="0" />
      <LineId Id="1465" Count="2" />
      <LineId Id="1469" Count="0" />
      <LineId Id="1471" Count="0" />
      <LineId Id="1468" Count="0" />
      <LineId Id="1473" Count="3" />
      <LineId Id="1464" Count="0" />
      <LineId Id="1477" Count="3" />
      <LineId Id="1431" Count="0" />
      <LineId Id="1484" Count="2" />
      <LineId Id="1482" Count="0" />
      <LineId Id="1487" Count="4" />
      <LineId Id="1493" Count="2" />
      <LineId Id="1492" Count="0" />
      <LineId Id="1497" Count="3" />
      <LineId Id="1496" Count="0" />
      <LineId Id="1501" Count="0" />
      <LineId Id="1503" Count="1" />
      <LineId Id="1502" Count="0" />
      <LineId Id="1212" Count="2" />
      <LineId Id="1453" Count="2" />
      <LineId Id="1215" Count="2" />
      <LineId Id="1451" Count="0" />
      <LineId Id="1218" Count="6" />
    </LineIds>
    <LineIds Name="S15_NG.FlowInit">
      <LineId Id="437" Count="9" />
      <LineId Id="461" Count="0" />
      <LineId Id="469" Count="3" />
      <LineId Id="476" Count="0" />
      <LineId Id="473" Count="1" />
      <LineId Id="462" Count="4" />
      <LineId Id="436" Count="0" />
    </LineIds>
    <LineIds Name="S15_NG.General">
      <LineId Id="382" Count="2" />
      <LineId Id="387" Count="0" />
      <LineId Id="389" Count="0" />
      <LineId Id="385" Count="1" />
      <LineId Id="390" Count="8" />
      <LineId Id="361" Count="0" />
      <LineId Id="381" Count="0" />
    </LineIds>
    <LineIds Name="S15_NG.ILC">
      <LineId Id="234" Count="4" />
      <LineId Id="308" Count="3" />
      <LineId Id="302" Count="0" />
      <LineId Id="307" Count="0" />
      <LineId Id="290" Count="0" />
      <LineId Id="244" Count="1" />
      <LineId Id="274" Count="0" />
    </LineIds>
    <LineIds Name="S15_NG.TipAuto">
      <LineId Id="118" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="145" Count="0" />
      <LineId Id="148" Count="1" />
      <LineId Id="183" Count="0" />
    </LineIds>
    <LineIds Name="S15_NG.TipManual">
      <LineId Id="137" Count="1" />
      <LineId Id="176" Count="0" />
      <LineId Id="262" Count="1" />
      <LineId Id="246" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="41" Count="0" />
    </LineIds>
    <LineIds Name="S15_NG.Z_Output">
      <LineId Id="2" Count="0" />
      <LineId Id="22" Count="2" />
      <LineId Id="21" Count="0" />
      <LineId Id="19" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>